--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,21 @@
 	<script src="javascripts/qunit-1.18.0.js"></script>
 	<!-- jQuery -->
     <script src="javascripts/jquery.min.js"></script>
+	
+	<!-- Stripe -->
+    <script src="https://checkout.stripe.com/v2/checkout.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/3.32/jquery.form.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.blockUI/2.61.0-2013.06.06/jquery.blockUI.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
     <script src="/javascripts/bootstrap.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.16/angular.min.js" type="text/javascript"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.16/angular-route.min.js"></script>
 	<script src="/javascripts/simpleCart.min.js" type="text/javascript"></script>
+	<script type="text/javascript" src="/javascripts/shoppingCart.js"></script>
+	<script type="text/javascript" src="/javascripts/product.js"></script>
+	<script src="/javascripts/controller.js" type="text/javascript"></script>
+	<script type="text/javascript" src="/javascripts/store.js"></script>
 	<script type="text/javascript" src="/javascripts/main.js"></script>
 	
 </head>
@@ -23,33 +33,35 @@
 <body>
 	<div ng-app="pgApp">
 	<div id="divCtrl" ng-controller="pgController">
-	<div class="container-fluid divcontainer">
-	<p>
-	Cart: <span class="simpleCart_total"></span> (<span id="simpleCart_quantity" class="simpleCart_quantity"></span> items)
-	<br />
-	<a href="javascript:;" class="simpleCart_empty">empty cart</a>
-	<br />
-	</p>
 	
-	<input "id=inputSearch" type="text" placeholder="Products or Stores" ng-model="searchTerm"
-            title="Enter product or store names" />
-    <button ng-click="search()" title="click to search">Search</button><br>
-	<div class="row-fluid" ng-repeat="item in results">
-        <!--{{item.name}} <button ng-click="addCart(item)">Add</button> -->
-		
-		<div class="simpleCart_shelfItem">
-		   <h2 class="item_name">{{item.name}}</h2>
-		   <img src="item-image.jpg" alt="Item Alt">
-		   <span class="item_price">${{item.price}}</span>
-		   <input type="text" class="item_quantity" value="1" />
-		   <a href="javascript:;" class="item_add">Add to Cart</a>
-		</div>
-		
+	<div class="container-fluid">
+        <div class="row-fluid">
+            <div class="span10 offset1">
+                <h1 class="well" >
+                    <a href="/">
+                        <!--<img src="img/logo.png" height="60" width="60" alt="logo"/> -->
+                    </a>
+                    PickGo Store 
+                </h1>
+				
+				<div>
+					<a href="/#/cart" title="go to shopping cart" ng-disabled="cart.getTotalCount() < 1">
+					<i class="icon-shopping-cart" />
+					<b>{{cart.getTotalCount()}}</b> items, <b>{{cart.getTotalPrice() | currency}}</b>
+					</a>
+				</div><br>
+				<div>
+					<input id="inputSearch" type="text" placeholder="Products or Stores" ng-model="searchTerm"
+							title="Enter product or store names" />
+					<button ng-click="searchProducts()" title="click to search">Search</button>
+				</div>
+				
+                <div ng-view></div>
+            </div>
+        </div>
     </div>
-	</div>
-    </div>
-	</div>
 	
+
 	<br><br>
 	<div id="qunit"></div>
 </body>
