--- a/public/index.html
+++ b/public/index.html
@@ -41,43 +41,32 @@
                     <a href="/">
                         <!--<img src="img/logo.png" height="60" width="60" alt="logo"/> -->
                     </a>
-                    PickGo Store 
+                    <div>
+					<input id="inputSearch" type="text" placeholder="Products or Stores" ng-model="searchTerm"
+							title="Enter product or store names" />
+					<button ng-click="searchProducts()" title="click to search">Search</button>
+				</div>
                 </h1>
-				<div>User: <input type="text" ng-model="userId"></div><br>
-				<div>
+				<div>User: <input type="text" ng-model="userId">
 					<a href="/#/cart" title="go to shopping cart" ng-disabled="cart.getTotalCount() < 1">
 					<i class="icon-shopping-cart" />
 					<b>{{cart.getTotalCount()}}</b> items, <b>{{cart.getTotalPrice() | currency}}</b>
 					</a>
-				</div><br>
-				<div>
-					<input id="inputSearch" type="text" placeholder="Products or Stores" ng-model="searchTerm"
-							title="Enter product or store names" />
-					<button ng-click="searchProducts()" title="click to search">Search</button>
-				</div><br>
-				<table>
-				<th>
+				</div>
+				<br>
 				<h3>Saved Products</h3>
-				</th>
-				<th>
+				<div ng-repeat="p in user.products">
+					<p><input type="checkbox" ng-model="p.selected">&nbsp;{{p.item.name}}&nbsp;<input type="text" ng-model="p.quantity"></p>
+				</div>
+				<button ng-click="submitOrders(user)">Submit</button><br>
 				<h3>Orders</h3>
-				</th>
-				<tbody>
-				<tr>
-				<td>
-					<div ng-repeat="p in user.products">
-						<p><input type="checkbox" ng-model="p.selected">&nbsp;{{p.item.name}}&nbsp;<input type="text" ng-model="p.quantity"></p>
+				<div ng-repeat="(key, array) in orders">
+					<div class="roundCornered">
+						<div ng-repeat="p in array">
+							<p><b>{{p.item.name}}</b>&nbsp;&nbsp;&nbsp;{{p.product.quantity}}</p>
+						</div>
 					</div>
-					<button ng-click="submitOrders(user)">Submit</button>
-				</td>
-				<td>
-					<div ng-repeat="p in user.openorders">
-						<p>{{p.product.id}}&nbsp;{{p.product.quantity}}</p>
-					</div>
-				</td>
-				</tr>
-				</tbody>
-				</table>
+				</div>
                 <div ng-view></div>
             </div>
         </div>
