--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     <script src="/javascripts/bootstrap.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.16/angular.min.js" type="text/javascript"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.16/angular-route.min.js"></script>
+	<script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.12.1.min.js"></script>
 	<script src="/javascripts/simpleCart.min.js" type="text/javascript"></script>
 	<script type="text/javascript" src="/javascripts/shoppingCart.js"></script>
 	<script type="text/javascript" src="/javascripts/product.js"></script>
@@ -66,7 +67,16 @@
 							<p><b>{{p.item.name}}</b>&nbsp;&nbsp;&nbsp;{{p.product.quantity}}</p>
 						</div>
 					</div>
-				</div>
+				</div><br>
+				<h3>Grouped Orders</h3>
+				<accordion close-others="oneAtATime">
+					<accordion-group heading="{{product.item.name}}" ng-repeat="product in user.products">
+						<p>Current orders: {{product.currentOrders}}</p>
+						<div ng-repeat='p in product.item.price'>
+							<img src="/images/manicule.png" width="20" height="20" ng-show="p.current" /><span>{{p.from}} - {{p.to}}:  ${{p.price}}</span>
+						</div>
+					</accordion-group>
+				</accordion>
                 <div ng-view></div>
             </div>
         </div>
